# Basic_CPP

01_Lesson_03/: MainCPP_Lesson_3.cpp  data_for_Lesson_3.cpp
01_Lesson_04/: MainCPP_Lesson_4.cpp  a.out
01_Lesson_05/: MainCPP_Lesson_5_1.cpp  MainCPP_Lesson_5_2.cpp  MainCPP_Lesson_5_3.cpp  MainCPP_Lesson_5_4.cpp  MainCPP_Lesson_5_5.cpp
01_Lesson_06/: MainCPP_Lesson_6_1.cpp  MainCPP_Lesson_6_2.cpp  MainCPP_Lesson_6_3.cpp  MainCPP_Lesson_6_4.cpp  MainCPP_Lesson_6_5.cpp
01_Lesson_07/: MainCPP_Lesson_7_2.cpp  MainCPP_Lesson_7_3.cpp  MainCPP_Lesson_7_4.cpp
01_Lesson_07/MainCPP_Lesson_7_5/: main.cpp  mylib.cpp  mylib.h
01_Lesson_08/: CMakeLists.txt  MyGame.cpp  MyGamePlay.cpp  MyGamePlay.h  MyGamePlayData.h
