cmake_minimum_required(VERSION 2.8)
project(MyGame)
set(CMAKE_CXX_FLAGS -std=c++17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(SOURCE_EXE MyGame.cpp MyGamePlay.cpp)
set(SOURCE_LIB MyGamePlay.h MyGamePlayData.h)
add_library(MyGamePlay STATIC MyGamePlay.cpp MyGamePlay.h MyGamePlayData.h)
add_executable(MyGame MyGame.cpp MyGamePlay.h MyGamePlay.cpp MyGamePlayData.h)
target_link_libraries(MyGame ncurses)
